--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,26 @@
   </head>
   <body>
     <h3>電子商網管理後台</h3>
+
+    <table border="1">
+      <tr>
+        <th>No.</th>
+        <th>名稱</th>
+        <th>廠商</th>
+        <th>單價</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>圖像Angular開發入門第二版</td>
+        <td>博碩文化</td>
+        <td>500</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>金魚都能懂的CSS必學屬性</td>
+        <td>博碩文化</td>
+        <td>500</td>
+      </tr>
+    </table>
   </body>
 </html>
