--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <h3>電子商網管理後台</h3>
-
     <table border="1">
       <tr>
         <th>No.</th>
@@ -28,5 +27,18 @@
         <td>500</td>
       </tr>
     </table>
+    <hr />
+    <div>
+      <div>1</div>
+      <div>圖像Angular開發入門第二版</div>
+      <div>博碩文化</div>
+      <div>500</div>
+    </div>
+    <div>
+      <div>2</div>
+      <div>金魚都能懂的CSS必學屬性</div>
+      <div>博碩文化</div>
+      <div>500</div>
+    </div>
   </body>
 </html>
