--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,18 @@
     </table>
     <hr />
     <div>
-      <div>1</div>
-      <div>圖像Angular開發入門第二版</div>
+      <div>
+        <span>1.</span>
+        <span>圖像Angular開發入門第二版</span>
+      </div>
       <div>博碩文化</div>
       <div>500</div>
     </div>
     <div>
-      <div>2</div>
-      <div>金魚都能懂的CSS必學屬性</div>
+      <div>
+        <span>2.</span>
+        <span>金魚都能懂的CSS必學屬性</span>
+      </div>
       <div>博碩文化</div>
       <div>500</div>
     </div>
