--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     </table>
     <hr />
     <div>
+      <img src="./assets/images/angular.jpg" alt="Angular" width="100" />
       <div>
         <span>1.</span>
         <span>圖像Angular開發入門第二版</span>
@@ -37,6 +38,7 @@
       <div>500</div>
     </div>
     <div>
+      <img src="./assets/images/css.jpg" alt="css" width="100" />
       <div>
         <span>2.</span>
         <span>金魚都能懂的CSS必學屬性</span>
