--- a/src/index.html
+++ b/src/index.html
@@ -9,47 +9,48 @@
     <header>
       <h3>電子商網管理後台</h3>
     </header>
-    <section>
-      <table border="1">
-        <tr>
-          <th>No.</th>
-          <th>名稱</th>
-          <th>廠商</th>
-          <th>單價</th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>圖像Angular開發入門第二版</td>
-          <td>博碩文化</td>
-          <td>500</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>金魚都能懂的CSS必學屬性</td>
-          <td>博碩文化</td>
-          <td>500</td>
-        </tr>
-      </table>
-      <hr />
+    <nav>
+      <a href="./form.html">產品新增</a>
+    </nav>
+    <table border="1">
+      <tr>
+        <th>No.</th>
+        <th>名稱</th>
+        <th>廠商</th>
+        <th>單價</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>圖像Angular開發入門第二版</td>
+        <td>博碩文化</td>
+        <td>500</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>金魚都能懂的CSS必學屬性</td>
+        <td>博碩文化</td>
+        <td>500</td>
+      </tr>
+    </table>
+    <hr />
+    <div>
+      <img src="./assets/images/angular.jpg" alt="Angular" width="100" />
       <div>
-        <img src="./assets/images/angular.jpg" alt="Angular" width="100" />
-        <div>
-          <span>1.</span>
-          <span>圖像Angular開發入門第二版</span>
-        </div>
-        <div>博碩文化</div>
-        <div>500</div>
+        <span>1.</span>
+        <span>圖像Angular開發入門第二版</span>
       </div>
+      <div>博碩文化</div>
+      <div>500</div>
+    </div>
+    <div>
+      <img src="./assets/images/css.jpg" alt="css" width="100" />
       <div>
-        <img src="./assets/images/css.jpg" alt="css" width="100" />
-        <div>
-          <span>2.</span>
-          <span>金魚都能懂的CSS必學屬性</span>
-        </div>
-        <div>博碩文化</div>
-        <div>500</div>
+        <span>2.</span>
+        <span>金魚都能懂的CSS必學屬性</span>
       </div>
-    </section>
+      <div>博碩文化</div>
+      <div>500</div>
+    </div>
     <footer>© 2024</footer>
   </body>
 </html>
